<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/background_layout_color"
    tools:context="com.androidaru.schedulemanageradvanced.EventDetails"
    android:id="@+id/rl_event_details">


    <TextView
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/tv_ed_date"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@color/background_button_color"
        android:id="@+id/tv_ed_date"
        android:layout_marginLeft="0dp"
        android:layout_marginStart="45dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/tv_ed_time"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@color/background_button_color"
        android:id="@+id/tv_ed_time"
        android:layout_marginLeft="20dp"
        android:layout_alignBottom="@+id/b_ed_editDate"
        android:layout_alignLeft="@+id/tv_ed_displayTime"
        android:layout_alignStart="@+id/tv_ed_displayTime" />

    <TextView
        android:layout_width="175dp"
        android:layout_height="50dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/tv_ed_displayDate"
        android:gravity="left"
        android:textColor="@color/background_button_color"
        android:id="@+id/tv_ed_displayDate"
        android:layout_below="@+id/tv_ed_date"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="125dp"
        android:layout_height="50dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/tv_ed_displayTime"
        android:gravity="right"
        android:textColor="@color/background_button_color"
        android:id="@+id/tv_ed_displayTime"
        android:layout_below="@+id/tv_ed_date"
        android:layout_toRightOf="@+id/tv_ed_displayDate"
        android:layout_toEndOf="@+id/tv_ed_displayDate" />

    <TextView
        android:layout_width="175dp"
        android:layout_height="30dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/tv_ed_description"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@color/background_button_color"
        android:id="@+id/tv_ed_description"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/tv_ed_displayDate"
        android:layout_centerHorizontal="true" />

    <ScrollView
        android:id="@+id/sc_ed"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:fillViewport="true"
        android:layout_below="@+id/tv_ed_description">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/tv_ed_displayDescription"
            android:id="@+id/tv_ed_displayDescription"
            android:gravity="start"
            android:textColor="@color/background_button_color"
            android:textAlignment="gravity" />

        </ScrollView>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:background="#6d717c"
        android:textColor="@color/background_layout_color"
        android:gravity="center"
        android:text="@string/b_ed_updateEvent"
        android:id="@+id/b_ed_editEvent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:background="#6d717c"
        android:textColor="@color/background_layout_color"
        android:gravity="center"
        android:text="@string/b_ed_deleteEvent"
        android:id="@+id/b_ed_deleteEvent"
        android:layout_above="@+id/b_ed_editEvent"
        android:layout_marginBottom="5dp"
        android:layout_centerHorizontal="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="30dp"
        android:layout_height="25dp"
        android:background="@drawable/edit_button"
        android:id="@+id/b_ed_editDate"
        android:layout_alignTop="@+id/tv_ed_date"
        android:layout_toRightOf="@+id/tv_ed_date"
        android:layout_toEndOf="@+id/tv_ed_date" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="30dp"
        android:layout_height="25dp"
        android:background="@drawable/edit_button"
        android:id="@+id/b_ed_editTime"
        android:layout_alignTop="@+id/tv_ed_time"
        android:layout_toRightOf="@+id/tv_ed_time"
        android:layout_toEndOf="@+id/tv_ed_time" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:background="#6d717c"
        android:textColor="@color/background_layout_color"
        android:gravity="center"
        android:text="@string/b_ed_share_text"
        android:id="@+id/b_ed_share"
        android:layout_marginBottom="5dp"
        android:layout_above="@+id/b_ed_deleteEvent"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
