<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@color/background_layout_color"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.msse655arvind.schedulemanager.AddSchedule"
    android:id="@+id/rl_add_event">

    <Button
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:background="#6d717c"
        android:gravity="center"
        android:text="@string/b_pickdate"
        android:textColor="@color/background_layout_color"
        android:id="@+id/b_adddate"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:background="#6d717c"
        android:gravity="center"
        android:text="@string/b_picktime"
        android:textColor="@color/background_layout_color"
        android:id="@+id/b_addtime"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/b_adddate"
        android:layout_marginTop="5dp" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:inputType="textMultiLine"
        android:background="@color/background_button_color"
        android:hint="@string/et_description_text"
        android:textColorHint="#ffffff"
        android:gravity="center"
        android:textColor="@color/background_layout_color"
        android:ems="10"
        android:id="@+id/et_description"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/b_addtime"
        android:layout_marginTop="5dp"
        android:layout_above="@+id/b_finish" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:background="#6d717c"
        android:textColor="@color/background_layout_color"
        android:gravity="center"
        android:text="@string/b_finish"
        android:id="@+id/b_finish"
        android:layout_marginTop="5dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"/>

</RelativeLayout>
