<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:id="@+id/ll_firstLine"
        android:weightSum="2"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/tv_date"
            android:id="@+id/tv_date"
            android:layout_weight="1"
            android:textSize="18sp"
            android:gravity="center"
            android:longClickable="false"
            android:textColor="#ffffff" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/tv_time"
            android:textSize="18sp"
            android:gravity="center"
            android:id="@+id/tv_time"
            android:layout_weight="1"
            android:longClickable="false"
            android:textColor="#ffffff" />

    </LinearLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:text="@string/tv_description"
        android:id="@+id/tv_description"
        android:gravity="center"
        android:layout_below="@+id/ll_firstLine"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="20sp"
        android:textColor="#ffffff" />

</RelativeLayout>
